fix: prevented cart overflow

--- a/styles/cart.css
+++ b/styles/cart.css
@@ -8,7 +8,7 @@
   div {
     position: sticky;
     top: 0;
-
+    overflow-y: scroll;
     h3 {
       font-size {
         font-size: 2dvw;
